--- a/npl_mod/common/package.json
+++ b/npl_mod/common/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "string",
+  "name": "common",
   "version": "0.0.1",
-  "main": "./string.lua",
+  "main": "./common.lua",
   "description": "",
   "author": {
     "name": "CaoYongfeng",
