--- a/nplcommon.csproj
+++ b/nplcommon.csproj
@@ -39,7 +39,9 @@
     <None Include="npl_mod\common\common.lua" />
     <None Include="npl_mod\common\package.json" />
     <None Include="npl_mod\common\string.lua" />
+    <None Include="npl_mod\common\json.lua" />
     <None Include="npl_mod\common\timer.lua" />
+    <None Include="npl_mod\common\try.lua" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
